--- a/AvalonStudio/AvalonStudio.Projects.Standard/AvalonStudio.Projects.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.Standard/AvalonStudio.Projects.Standard.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Definition.cs" />
     <Compile Include="ExportableProperty.cs" />
     <Compile Include="Include.cs" />
+    <Compile Include="ReferenceFolder.cs" />
     <Compile Include="StandardProjectFolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IStandardProject.cs" />
