--- a/AvalonStudio/AvalonStudioBuild/AvalonStudioBuild.csproj
+++ b/AvalonStudio/AvalonStudioBuild/AvalonStudioBuild.csproj
@@ -72,6 +72,10 @@
       <Project>{4726219f-2e8e-4f65-a5ad-3167e3dbf56c}</Project>
       <Name>AvalonStudio.Projects.Standard</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Repository\AvalonStudio.Repositories.csproj">
+      <Project>{29c948e9-4d96-4490-b039-a5bbf6eec2e5}</Project>
+      <Name>AvalonStudio.Repositories</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Toolchains.Llilum\AvalonStudio.Toolchains.Llilum.csproj">
       <Project>{baab6832-377b-4115-be7e-4c90898eaaa3}</Project>
       <Name>AvalonStudio.Toolchains.Llilum</Name>
