--- a/AvalonStudio/AvalonStudio.Toolchains.LocalGCC/AvalonStudio.Toolchains.LocalGCC.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.LocalGCC/AvalonStudio.Toolchains.LocalGCC.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5614AA2F-2B01-4E0D-807E-924680C570ED}</ProjectGuid>
+    <ProjectGuid>{7A82C777-039E-47AA-A77B-3A9544E147C5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AvalonStudio.Extensibility</RootNamespace>
-    <AssemblyName>AvalonStudio.Extensibility</AssemblyName>
+    <RootNamespace>AvalonStudio.Toolchains.LocalGCC</RootNamespace>
+    <AssemblyName>AvalonStudio.Toolchains.LocalGCC</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Perspex.Animation, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Perspex.9999.0.1254-nightly\lib\portable-windows8+net45\Perspex.Animation.dll</HintPath>
       <Private>True</Private>
@@ -112,7 +108,6 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive.Core, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
@@ -130,7 +125,6 @@
       <HintPath>..\packages\Rx-PlatformServices.2.2.5\lib\net45\System.Reactive.PlatformServices.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -139,64 +133,57 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigPage.cs" />
-    <Compile Include="Debugging\BreakPoint.cs" />
-    <Compile Include="Debugging\DisassembledLine.cs" />
-    <Compile Include="Debugging\Extensions.cs" />
-    <Compile Include="Debugging\Frame.cs" />
-    <Compile Include="Debugging\IDebugger.cs" />
-    <Compile Include="Debugging\MemoryBytes.cs" />
-    <Compile Include="Debugging\NameValuePair.cs" />
-    <Compile Include="Debugging\Register.cs" />
-    <Compile Include="Debugging\StopRecord.cs" />
-    <Compile Include="Debugging\Variable.cs" />
-    <Compile Include="Debugging\VariableObject.cs" />
-    <Compile Include="Debugging\VarUpdateCommand.cs" />
-    <Compile Include="Languages\CodeAnalysisResults.cs" />
-    <Compile Include="Languages\CodeCompletionData.cs" />
-    <Compile Include="Languages\CodeCompletionResults.cs" />
-    <Compile Include="Languages\CursorKind.cs" />
-    <Compile Include="Languages\Diagnostic.cs" />
-    <Compile Include="Languages\ILanguageService.cs" />
-    <Compile Include="Languages\LinkageKind.cs" />
-    <Compile Include="Languages\ParamterSymbol.cs" />
-    <Compile Include="Languages\Symbol.cs" />
-    <Compile Include="Languages\SyntaxHighlightingData.cs" />
-    <Compile Include="Languages\UnsavedFile.cs" />
-    <Compile Include="Menus\IMenuItem.cs" />
-    <Compile Include="MVVM\Extensions.cs" />
-    <Compile Include="MVVM\ObservableCollectionExtensions.cs" />
-    <Compile Include="MVVM\ViewModel.cs" />
-    <Compile Include="Platform\Platform.cs" />
-    <Compile Include="Plugin\IPlugin.cs" />
-    <Compile Include="Projects\IProject.cs" />
-    <Compile Include="Projects\IProjectFolder.cs" />
-    <Compile Include="Projects\IProjectItem.cs" />
-    <Compile Include="Projects\IProjectTemplate.cs" />
-    <Compile Include="Projects\ISolution.cs" />
-    <Compile Include="Projects\ISourceFile.cs" />
-    <Compile Include="Projects\Solution.cs" />
+    <Compile Include="CompileSettings.cs" />
+    <Compile Include="CompileSettingsForm.paml.cs">
+      <DependentUpon>CompileSettingsForm.paml</DependentUpon>
+    </Compile>
+    <Compile Include="CompileSettingsFormViewModel.cs" />
+    <Compile Include="GCCLinkSettings.cs" />
+    <Compile Include="LinkerSettingsForm.paml.cs">
+      <DependentUpon>LinkerSettingsForm.paml</DependentUpon>
+    </Compile>
+    <Compile Include="LinkerSettingsFormViewModel.cs" />
+    <Compile Include="LocalGCCToolchain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Toolchains\IToolchain.cs" />
-    <Compile Include="Utils\Constants.cs" />
-    <Compile Include="Utils\DynamicExtensions.cs" />
-    <Compile Include="Utils\GeneralExtensions.cs" />
-    <Compile Include="Utils\IConsole.cs" />
-    <Compile Include="Utils\IProjectExtensions.cs" />
-    <Compile Include="Utils\SerializedObject.cs" />
-    <Compile Include="Utils\WeakSubscriber.cs" />
-    <Compile Include="Workspace.cs" />
+    <Compile Include="GCCToolchainSettings.cs" />
+    <Compile Include="ToolchainSettingsForm.xaml.cs">
+      <DependentUpon>ToolchainSettingsForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ToolchainSettingsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
+      <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
+      <Name>AvalonStudio.Extensibility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Projects.Standard\AvalonStudio.Projects.Standard.csproj">
+      <Project>{4726219f-2e8e-4f65-a5ad-3167e3dbf56c}</Project>
+      <Name>AvalonStudio.Projects.Standard</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Toolchains.Standard\AvalonStudio.Toolchains.Standard.csproj">
+      <Project>{72c71854-5897-4e14-a1ae-b3b48f139af7}</Project>
+      <Name>AvalonStudio.Toolchains.Standard</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CompileSettingsForm.paml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LinkerSettingsForm.paml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AvalonStudio.TextEditor\AvalonStudio.TextEditor.csproj">
-      <Project>{2303a1a3-d7aa-41cc-972d-a710d7d3d1d3}</Project>
-      <Name>AvalonStudio.TextEditor</Name>
-    </ProjectReference>
+    <EmbeddedResource Include="ToolchainSettingsForm.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetPath) ..\..\..\AvalonStudio\bin\Debug\Plugins\$(TargetFileName)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
