--- a/AvalonStudio/AvalonStudio.Extensibility/packages.config
+++ b/AvalonStudio/AvalonStudio.Extensibility/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LibGit2Sharp" version="0.22.0" targetFramework="net451" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net451" />
   <package id="Perspex" version="9999.0.1269-nightly" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
