--- a/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
+++ b/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
@@ -130,6 +130,7 @@
     <Compile Include="ClangFormat.cs" />
     <Compile Include="ClangFormatSettings.cs" />
     <Compile Include="CPlusPlusLanguageService.cs" />
+    <Compile Include="CPlusPlusUnitTestTemplate.cs" />
     <Compile Include="CppIndentationStrategy.cs" />
     <Compile Include="DefineTextLineTransformer.cs" />
     <Compile Include="IncludeTextLineTransformer.cs" />
@@ -138,11 +139,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticLibraryTemplate.cs" />
     <Compile Include="TextColoringTransformer.cs" />
+    <Compile Include="UnitTestTemplate.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UnitTestTemplate.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\nclang\NClang\NClang.csproj">
       <Project>{5AE560F9-0E8E-488E-B6C4-3C8196F9013A}</Project>
       <Name>NClang</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Debugging.GDB.Local\AvalonStudio.Debugging.GDB.Local.csproj">
+      <Project>{0ead4429-5b5a-4ebb-87b6-ea91ce86b09e}</Project>
+      <Name>AvalonStudio.Debugging.GDB.Local</Name>
     </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
       <Project>{5614AA2F-2B01-4E0D-807E-924680C570ED}</Project>
@@ -160,6 +170,14 @@
       <Project>{2303A1A3-D7AA-41CC-972D-A710D7D3D1D3}</Project>
       <Name>AvalonStudio.TextEditor</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Toolchains.LocalGCC\AvalonStudio.Toolchains.LocalGCC.csproj">
+      <Project>{7a82c777-039e-47aa-a77b-3a9544e147c5}</Project>
+      <Name>AvalonStudio.Toolchains.LocalGCC</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Toolchains.Standard\AvalonStudio.Toolchains.Standard.csproj">
+      <Project>{72c71854-5897-4e14-a1ae-b3b48f139af7}</Project>
+      <Name>AvalonStudio.Toolchains.Standard</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -174,6 +192,13 @@
     <Content Include="libclang.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="UnitTestTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>UnitTestTemplate.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
