--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -346,6 +346,10 @@
       <Project>{29c948e9-4d96-4490-b039-a5bbf6eec2e5}</Project>
       <Name>AvalonStudio.Repositories</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.TestFrameworks.Catch\AvalonStudio.TestFrameworks.Catch.csproj">
+      <Project>{3464977f-b29d-43e6-8ea8-d9cec603d989}</Project>
+      <Name>AvalonStudio.TestFrameworks.Catch</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.TextEditor\AvalonStudio.TextEditor.csproj">
       <Project>{2303a1a3-d7aa-41cc-972d-a710d7d3d1d3}</Project>
       <Name>AvalonStudio.TextEditor</Name>
