new implementation of jlink adaptor.

--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -318,6 +318,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AvalonStudio.Debugging.GDB.JLink\AvalonStudio.Debugging.GDB.JLink.csproj">
+      <Project>{eb735b57-518a-4dc5-8dff-ca6d5db604d2}</Project>
+      <Name>AvalonStudio.Debugging.GDB.JLink</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Debugging.GDB.Local\AvalonStudio.Debugging.GDB.Local.csproj">
       <Project>{0ead4429-5b5a-4ebb-87b6-ea91ce86b09e}</Project>
       <Name>AvalonStudio.Debugging.GDB.Local</Name>
