Implemented break points, and debug line indication clears when process is running, to give user instant feedback.

--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -167,6 +167,7 @@
   <ItemGroup>
     <Compile Include="App.paml.cs" />
     <Compile Include="CompositionRoot.cs" />
+    <Compile Include="Debugging\BreakPointMargin.cs" />
     <Compile Include="Controls\CallStack.paml.cs">
       <DependentUpon>CallStack.paml</DependentUpon>
     </Compile>
