--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -182,6 +182,7 @@
     <Compile Include="MVVM\ObservableCollectionExtensions.cs" />
     <Compile Include="MVVM\ViewModel.cs" />
     <Compile Include="Platform\Platform.cs" />
+    <Compile Include="Platform\Unix\MapAttribute.cs" />
     <Compile Include="Plugin\IPlugin.cs" />
     <Compile Include="Projects\IProject.cs" />
     <Compile Include="Projects\IProjectFolder.cs" />
