--- a/AvalonStudio/AvalonStudio.Projects.CPlusPlus/AvalonStudio.Projects.CPlusPlus.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.CPlusPlus/AvalonStudio.Projects.CPlusPlus.csproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlankCPlusPlusLangaguageTemplate.cs" />
+    <Compile Include="ClassCodeTemplate.cs" />
     <Compile Include="ComponentSettingsForm.paml.cs">
       <DependentUpon>ComponentSettingsForm.paml</DependentUpon>
     </Compile>
