--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -154,6 +154,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\Command.cs" />
+    <Compile Include="Commands\CommandDefinition.cs" />
+    <Compile Include="Commands\CommandDefinitionAttribute.cs" />
+    <Compile Include="Commands\CommandDefinitionBase.cs" />
+    <Compile Include="Commands\CommandHandlerAttribute.cs" />
+    <Compile Include="Commands\CommandHandlerWrapper.cs" />
+    <Compile Include="Commands\CommandKeyboardShortcut.cs" />
+    <Compile Include="Commands\CommandKeyGestureService.cs" />
+    <Compile Include="Commands\CommandListDefinition.cs" />
+    <Compile Include="Commands\CommandRouter.cs" />
+    <Compile Include="Commands\CommandService.cs" />
+    <Compile Include="Commands\ExcludeCommandKeyboardShortcut.cs" />
+    <Compile Include="Commands\ICommandHandler.cs" />
+    <Compile Include="Commands\ICommandKeyGestureService.cs" />
+    <Compile Include="Commands\ICommandRerouter.cs" />
+    <Compile Include="Commands\ICommandRouter.cs" />
+    <Compile Include="Commands\ICommandService.cs" />
+    <Compile Include="Commands\ICommandUiItem.cs" />
+    <Compile Include="Commands\TargetableCommand.cs" />
     <Compile Include="ConfigPage.cs" />
     <Compile Include="Debugging\BreakPoint.cs" />
     <Compile Include="Debugging\DisassembledLine.cs" />
@@ -179,7 +198,17 @@
     <Compile Include="Languages\Symbol.cs" />
     <Compile Include="Languages\SyntaxHighlightingData.cs" />
     <Compile Include="Languages\UnsavedFile.cs" />
+    <Compile Include="Menus\CommandMenuItemDefinition.cs" />
+    <Compile Include="Menus\ExcludeMenuDefinition.cs" />
+    <Compile Include="Menus\ExcludeMenuItemDefinition.cs" />
+    <Compile Include="Menus\ExcludeMenuItemGroupDefinition.cs" />
     <Compile Include="Menus\IMenuItem.cs" />
+    <Compile Include="Menus\MenuBarDefinition.cs" />
+    <Compile Include="Menus\MenuDefinition.cs" />
+    <Compile Include="Menus\MenuDefinitionBase.cs" />
+    <Compile Include="Menus\MenuItemDefinition.cs" />
+    <Compile Include="Menus\MenuItemGroupDefinition.cs" />
+    <Compile Include="Menus\TextMenuItemDefinition.cs" />
     <Compile Include="MVVM\DataVirtualization\AsyncVirtualizingCollection.cs" />
     <Compile Include="MVVM\DataVirtualization\DataPage.cs" />
     <Compile Include="MVVM\DataVirtualization\DataWrapper.cs" />
