--- a/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
+++ b/AvalonStudio/AvalonStudio.Languages.CPlusPlus/AvalonStudio.Languages.CPlusPlus.csproj
@@ -172,6 +172,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="clang-format" />
     <None Include="packages.config" />
     <None Include="libclang.so">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -193,7 +194,8 @@
     <PostBuildEvent>copy $(TargetPath) ..\..\..\AvalonStudio\bin\Debug\Plugins\$(TargetFileName)
 copy $(TargetDir)\libclang.dll ..\..\..\AvalonStudio\bin\Debug\libclang.dll
 copy $(TargetDir)\libclang.so ..\..\..\AvalonStudio\bin\Debug\libclang.so
-copy $(TargetDir)\clang-format.exe ..\..\..\AvalonStudio\bin\Debug\Plugins\clang-format.exe</PostBuildEvent>
+copy $(TargetDir)\clang-format.exe ..\..\..\AvalonStudio\bin\Debug\Plugins\clang-format.exe
+copy $(TargetDir)\clang-format ..\..\..\AvalonStudio\bin\Debug\Plugins\clang-format</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
