rename platform namespace to platforms. renamed WorkspaceViewModel to ShellViewModel renamed Workspace to Shell (to come further work to move shell to IShell interface)

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -211,7 +211,7 @@
     <Compile Include="Utils\IProjectExtensions.cs" />
     <Compile Include="Utils\SerializedObject.cs" />
     <Compile Include="Utils\WeakSubscriber.cs" />
-    <Compile Include="Workspace.cs" />
+    <Compile Include="Shell.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
