Language service now handles intellisense when it attaches to a document written in a language it understands. Now all intellisense logic is defined per language. Just the logic for opening, closing and displaying intellisense dialog is common to the entire shell.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -171,8 +171,10 @@
     <Compile Include="Languages\CodeAnalysisResults.cs" />
     <Compile Include="Languages\CodeCompletionData.cs" />
     <Compile Include="Languages\CodeCompletionResults.cs" />
+    <Compile Include="Languages\CompletionDataViewModel.cs" />
     <Compile Include="Languages\CursorKind.cs" />
     <Compile Include="Languages\Diagnostic.cs" />
+    <Compile Include="Languages\IIntellisenseControl.cs" />
     <Compile Include="Languages\ILanguageService.cs" />
     <Compile Include="Languages\LinkageKind.cs" />
     <Compile Include="Languages\ParamterSymbol.cs" />
