--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -178,12 +178,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviors\CodeInformationToolTipBehavior.cs" />
+    <Compile Include="Behaviors\DebugInformationToolTipBehaviour.cs" />
     <Compile Include="Behaviors\PopupBehavior.cs" />
     <Compile Include="App.paml.cs" />
     <Compile Include="Behaviors\PointerHoverBehaviour.cs" />
     <Compile Include="Behaviors\ToolTipBehaviour.cs" />
     <Compile Include="CompositionRoot.cs" />
     <Compile Include="Controls\CachedContentControl.cs" />
+    <Compile Include="Controls\DebugHoverProbe.paml.cs">
+      <DependentUpon>DebugHoverProbe.paml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\NewItemDialog.paml.cs">
       <DependentUpon>NewItemDialog.paml</DependentUpon>
     </Compile>
@@ -367,6 +371,7 @@
     <EmbeddedResource Include="Controls\Locals.paml" />
     <EmbeddedResource Include="Controls\Disassembly.paml" />
     <EmbeddedResource Include="Controls\NewItemDialog.paml" />
+    <EmbeddedResource Include="Controls\DebugHoverProbe.paml" />
     <None Include="libgit2-821131f.so">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
