Added beginings of ToolControl that dockable widgets will be based on.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -155,6 +155,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigPage.cs" />
+    <Compile Include="Controls\ControlTheme.paml.cs">
+      <DependentUpon>ControlTheme.paml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ToolControl.cs" />
     <Compile Include="Debugging\BreakPoint.cs" />
     <Compile Include="Debugging\DisassembledLine.cs" />
     <Compile Include="Debugging\Extensions.cs" />
@@ -216,6 +220,8 @@
     <Compile Include="Shell.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\ToolControl.paml" />
+    <EmbeddedResource Include="Controls\ControlTheme.paml" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
