--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -188,6 +188,9 @@
     <Compile Include="Controls\DebugHoverProbe.paml.cs">
       <DependentUpon>DebugHoverProbe.paml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\DocumentTabControl.paml.cs">
+      <DependentUpon>DocumentTabControl.paml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\NewItemDialog.paml.cs">
       <DependentUpon>NewItemDialog.paml</DependentUpon>
     </Compile>
@@ -372,6 +375,7 @@
     <EmbeddedResource Include="Controls\Disassembly.paml" />
     <EmbeddedResource Include="Controls\NewItemDialog.paml" />
     <EmbeddedResource Include="Controls\DebugHoverProbe.paml" />
+    <EmbeddedResource Include="Controls\DocumentTabControl.paml" />
     <None Include="libgit2-821131f.so">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
